Remove min height of content header, as it would look bad if there is no avatar. Also ensure actions have 16px top margin. The featured indicator was too close

--- a/src/content/css/content.less
+++ b/src/content/css/content.less
@@ -90,7 +90,6 @@
 
         .content-header-inner {
             padding: 20px 20px 0px 20px;
-            min-height: 32px;
             clear: both;
         }
     }
@@ -153,6 +152,7 @@
     }
 
     .content-footer {
+        margin-top: 16px;
         padding: 0 20px;
         clear: both;
 
